wacc/test/golden/semanticErr.exit.globalReturn
# trying to return from the main program

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  return 42 ;
  println "should not get here" 
end


Semantic error in test/wacc_examples/invalid/semanticErr/exit/globalReturn.wacc (line 12, column 3):
type error: return statements are not allowed in the main program
> begin
>   return 42 ;
>   ^
>   println "should not get here" 

